// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardSubtitle > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<h6
  class="rmd-typography rmd-typography--subtitle-2 rmd-text-secondary-color rmd-no-margin rmd-card__subtitle"
>
  Subtitle
</h6>
`;

exports[`CardSubtitle > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<h6
  class="rmd-typography rmd-typography--subtitle-2 rmd-text-secondary-color rmd-no-margin rmd-card__subtitle custom-class-name"
  style="color: white;"
>
  Subtitle
</h6>
`;
